--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,7 +9,9 @@
     <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
     <title>Kasa</title>
   </head>
+
   <body>
     <div id="root"></div>
   </body>
+  
 </html>
